--- a/config/cache.yml
+++ b/config/cache.yml
@@ -1,7 +1,7 @@
 default: &default
+  database: cache
   store_options:
-    # Cap age of oldest cache entry to fulfill retention policies
-    # max_age: <%= 60.days.to_i %>
+    max_age: <%= 1.day.to_i %>
     max_size: <%= 256.megabytes %>
     namespace: <%= Rails.env %>
 
@@ -12,5 +12,4 @@ test:
   <<: *default
 
 production:
-  database: cache
   <<: *default
