--- a/.github/workflows/update-icons.yml
+++ b/.github/workflows/update-icons.yml
@@ -2,9 +2,9 @@ name: Update Icons
 
 on:
   workflow_dispatch:
-  # schedule:
-  #   # Runs every day at 00:00 UTC
-  #   - cron: '0 0 * * *'
+  schedule:
+    # Runs every day at 00:00 UTC
+    - cron: '0 0 * * *'
 
 jobs:
   update:
@@ -26,4 +26,4 @@ jobs:
           git config user.name berts-icon-bot[bot]
           git add .
           git commit -m "chore: updated selfh.st/icons submodule"
-          git push --force
+          git push
