--- a/test/fixtures/quotes.yml
+++ b/test/fixtures/quotes.yml
@@ -4,3 +4,4 @@ life:
   token: life
   quote: "Life's a box of chocolates, Forrest. You never know what you're gonna get."
   author: "Mrs. Gump"
+  position: 1
