Improved test coverage of helpers

--- a/test/fixtures/icon_variants.yml
+++ b/test/fixtures/icon_variants.yml
@@ -39,3 +39,18 @@ unraid_png_dark:
   icon: "unraid"
   format: "png"
   theme: "dark"
+
+dokploy_png_default:
+  icon: "dokploy"
+  format: "png"
+  theme: "default"
+
+dokploy_png_light:
+  icon: "dokploy"
+  format: "png"
+  theme: "light"
+
+dokploy_png_dark:
+  icon: "dokploy"
+  format: "png"
+  theme: "dark"
